tests/ui/ptr-coercion.stderr
error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:9:25
   |
LL |     let x: *mut isize = x;
   |            ----------   ^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
              found raw pointer `*const isize`

error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:15:25
   |
LL |     let x: *mut isize = &42;
   |            ----------   ^^^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
                found reference `&isize`

error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:21:25
   |
LL |     let x: *mut isize = x;
   |            ----------   ^ types differ in mutability
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*mut isize`
              found raw pointer `*const isize`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
